add timer with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tr_restaurant">Restorantım</string>
     <string name="email">e-mail</string>
     <string name="password">parola</string>
+    <string name="client_id">87448234363-avs3scafr5sour3u6s5ru37g05tpkhdl.apps.googleusercontent.com</string>
 </resources>
